# bellga.me2API

./: .env.dist  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: __init__.py  main.py  worker.py
api/config/: settings.py
api/core/: autoloading.py  database.py
api/exceptions/: auth.py  root.py
api/managers/: auth.py  connection.py  message.py  root.py
api/middlewares/: cors.py  root.py
api/models/: game.py  room.py  user.py
api/routers/: room.py  root.py  test.py
